--- a/home/home.css
+++ b/home/home.css
@@ -1,43 +1,47 @@
 * {
-    background-color: #e1d4d4;
     margin: 0;
     padding: 0;
 }
 
+body {
+    background-color: #e1d4d4;
+    height: 100%;
+}
+
 #logo {
     position: absolute;
-    top: 10px;
+    top: 0px;
     left: 40px;
 }
 
 #logo img {
-    width: 180px;
-    height: 135px;
+    width: 130px;
+    height: 100px;
     position: relative;
     top: 0px;
-    left: 30px;
-    object-fit: cover; 
+    left: 20px;
+ 
 }
 
 #cabecalho{
-    margin-top: 25px;
     width: 100%;
-    height: 100px;
+    height: 79px;
 }
 
 #titulo{
-    margin-top: 62px;
+    margin-top: 35px;
     font-family: Times, serif;
-    font-size: 40px;
+    font-size: 35px;
     color: #692b2c;
     text-align: center;
 }
 
 #subcabecalho {
-    height: 70px;
+    height: 50px;
     width: 100%;
     background-color: #692b2c;
     display: inline-block;
+    text-align: center;
 }
 
 #subtitulo{
@@ -57,7 +61,6 @@
 }
 
 .botao {
-    margin-top: 25px;
     font-size: 1.2em;
     background: #692b2c;
     border: 0;
@@ -65,16 +68,14 @@
     color: #e1d4d4;
     padding: 0.2em 0.6em;
     text-shadow: 1px 1px 1px rgba(0, 0, 0, 0.5);
-    top: 90%;
-    left: 50%;
+    top: 55%;
+    left: 15%;
     height: 50px;
     transition: transform 1s ease;
+    position: absolute;
 }
 
 .botao:hover {
-    background: #78403d;
-    box-shadow: inset 2px 2px 2px rgba(0, 0, 0, 0.2);
-    text-shadow: none;
     transition: transform .5s ease;
     transform: scale(1.5);
 }
@@ -88,10 +89,10 @@ input, select, textarea, button {
 }
 
 .botaoAba {
-    margin-top: 20px;
+    margin-top: 12.5px;
     background-color: #692b2c;
     color: #e1d4d4;
-    font-size: 20px;
+    font-size: 15px;
     border: 0;
     padding: 0.2em 0.6em;
     transition: transform 1s ease;
@@ -100,4 +101,15 @@ input, select, textarea, button {
 .botaoAba:hover {
     transition: transform .5s ease;
     transform: scale(1.5);
+}
+
+#fundo {
+    margin-top: 0px;
+    height: 400px;
+}
+
+#fundo img {
+    width: 100%;
+    height: 417px;
+    margin-bottom: 0;
 }
