--- a/localizacao/localizacao.css
+++ b/localizacao/localizacao.css
@@ -1,66 +1,81 @@
-* {
+*{
     margin: 0;
     padding: 0;
 }
 
-body{
+body {
     background-color: #e1d4d4;
+    height: 100%;
 }
 
 #logo {
     position: absolute;
-    top: 10px;
+    top: 0px;
     left: 40px;
 }
 
 #logo img {
-    width: 180px;
-    height: 135px;
+    width: 130px;
+    height: 100px;
     position: relative;
     top: 0px;
-    left: 30px;
-    object-fit: cover; 
+    left: 20px;
+ 
 }
 
 #cabecalho{
-    margin-top: 25px;
     width: 100%;
-    height: 100px;
+    height: 79px;
+    margin-top: 22px;
 }
 
 #titulo{
-    margin-top: 62px;
+    margin-top: 10px;
     font-family: Times, serif;
-    font-size: 40px;
+    font-size: 35px;
     color: #692b2c;
     text-align: center;
 }
 
+#titulo2{
+    margin-top: 0px;
+    font-family: Times, serif;
+    font-size: 25px;
+    color: #692b2c;
+    text-align: center;
+}
+
+
 #subcabecalho {
-    background-color: #692b2c;
-    height: 70px;
+    margin-top: 13px;
+    height: 50px;
     width: 100%;
-    font-size: 30px;
-    font-family: Georgia, 'Times New Roman', Times, serif;
+    background-color: #692b2c;
+    display: inline-block;
     text-align: center;
 }
 
 #subtitulo {
     color: #e1d4d4;
-    position: absolute;
-    top: 178px; bottom: 0;
+    position: relative;
+    top: 12px; bottom: 0;
     left: 0; right: 0;
     margin: auto;
+    font-size: 20px;
 }
 
 #conteudo {
     margin-top: 10px;
+    margin-left: 50px;
 }
 
 #texto {
-    font-family: Times, serif;
-    margin-left: 10px;
     margin-bottom: 100px;
     text-align: center;
     font-size: 20px;
+    color: #692b2c;
+}
+
+#mapa {
+    margin-top: 10px;
 }
