--- a/teste.css
+++ b/teste.css
@@ -1,4 +1,4 @@
-* {
+*{
     margin: 0;
     padding: 0;
 }
@@ -16,28 +16,52 @@ body {
 
 #logo img {
     width: 130px;
-    height: 130px;
+    height: 100px;
     position: relative;
-    top: 8px;
+    top: 0px;
     left: 20px;
  
 }
 
 #cabecalho{
-    margin-top: 40px;
     width: 100%;
-    height: 500px;
+    height: 79px;
+    margin-top: 22px;
 }
 
-#titulo {
+#titulo{
+    margin-top: 10px;
+    font-family: Times, serif;
+    font-size: 35px;
+    color: #692b2c;
     text-align: center;
 }
 
-#subtitulo{
-    font-family: sans-serif;
+#titulo2{
+    margin-top: 0px;
+    font-family: Times, serif;
+    font-size: 25px;
     color: #692b2c;
-    margin-left: 36%;
-    text-align: left;
+    text-align: center;
+}
+
+
+#subcabecalho {
+    margin-top: 13px;
+    height: 50px;
+    width: 100%;
+    background-color: #692b2c;
+    display: inline-block;
+    text-align: center;
+}
+
+#subtitulo {
+    color: #e1d4d4;
+    position: relative;
+    top: 12px; bottom: 0;
+    left: 0; right: 0;
+    margin: auto;
+    font-size: 20px;
 }
 
 #rodape {
@@ -52,7 +76,7 @@ body {
 
 #primeira {
     margin-top: 10px;
-    margin-left: 900px;
+    margin-left: 800px;
 }
 
 #centro {
@@ -70,7 +94,8 @@ fieldset {
 }
 
 form{
-    margin-left: 40%;
+    margin-top: 20px;
+    margin-left: 36%;
 }
 
 body {
